Git Tests/force-app/main/default/default/objects/Contact/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auxiliar de Compras</fullName>
            </value>
            <value>
                <fullName>Estoquista</fullName>
            </value>
            <value>
                <fullName>Farmacêutico</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Médico</fullName>
            </value>
            <value>
                <fullName>Proprietário</fullName>
            </value>
            <value>
                <fullName>Recebedor</fullName>
            </value>
            <value>
                <fullName>Secretária</fullName>
            </value>
            <value>
                <fullName>Superintendente</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>