Git Tests/force-app/main/default/default/objects/Contact/fields/NomeFornecedor__c.field-meta.xml
<CustomField>
    <fullName>NomeFornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do fornecedor</label>
    <referenceTo>Fornecedor__c</referenceTo>
    <relationshipLabel>Contatos</relationshipLabel>
    <relationshipName>Contatos</relationshipName>
    <type>Lookup</type>
</CustomField>