Git Tests/force-app/main/default/default/objects/Contact/fields/Padrao__c.field-meta.xml
<CustomField>
    <fullName>Padrao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Padrão</label>
    <type>Checkbox</type>
</CustomField>