Git Tests/force-app/main/default/default/objects/Contact/fields/RedeSocial__c.field-meta.xml
<CustomField>
    <fullName>RedeSocial__c</fullName>
    <label>Rede social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>