Git Tests/force-app/main/default/default/objects/Contact/fields/TipoTelefone__c.field-meta.xml
<CustomField>
    <fullName>TipoTelefone__c</fullName>
    <label>Tipo do telefone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Pessoal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>