Git Tests/force-app/main/default/default/objects/Contact/recordTypes/ContatoCliente.recordType-meta.xml
<RecordType>
    <fullName>ContatoCliente</fullName>
    <active>true</active>
    <label>Contato do cliente</label>
</RecordType>