Git Tests/force-app/main/default/default/objects/Contact/recordTypes/ContatoFornecedor.recordType-meta.xml
<RecordType>
    <fullName>ContatoFornecedor</fullName>
    <active>true</active>
    <label>Contato do fornecedor</label>
</RecordType>