Git Tests/force-app/main/default/default/objects/Contact/validationRules/Contato_ObrigarPreenchimentoNome.validationRule-meta.xml
<ValidationRule>
    <fullName>Contato_ObrigarPreenchimentoNome</fullName>
    <active>true</active>
    <description>Regra de validação para obrigar preencher o nome do contato.</description>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>É necessário preencher o primeiro nome do contato.</errorMessage>
</ValidationRule>